Web Inspector: Styles: Jump to effective property button doesn't hide after overridden property become effective https://bugs.webkit.org/show_bug.cgi?id=195770 <rdar://problem/48903634>
Reviewed by Matt Baker.

* UserInterface/Views/SpreadsheetCSSStyleDeclarationEditor.css:
(.spreadsheet-style-declaration-editor .property .select-effective-property): Added.
(.spreadsheet-style-declaration-editor .property.overridden .select-effective-property): Deleted.
Hide `.select-effective-property` element for properties that aren't overridden.


Canonical link: https://commits.webkit.org/210060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242973 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/SpreadsheetCSSStyleDeclarationEditor.css
+++ b/Source/WebInspectorUI/UserInterface/Views/SpreadsheetCSSStyleDeclarationEditor.css
@@ -166,7 +166,7 @@ body:matches(.window-docked-inactive, .window-inactive) .spreadsheet-style-decla
     color: var(--syntax-highlight-string-color);
 }
 
-.spreadsheet-style-declaration-editor .property.overridden .select-effective-property {
+.spreadsheet-style-declaration-editor .property .select-effective-property {
     display: none;
     height: 10px;
     line-height: 10px;
